data/derived/fa15/progs/unify/prog0220.ml.out
Characters 54-57:
  | b -> if (f b = (f b, true)) then 
                    ^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * 'b
